--- a/dyssync_predictions.ipynb
+++ b/dyssync_predictions.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "# Hyperparameters\n",
     "#learning_rate = 0.1\n",
-    "training_steps = 64 # 1472 training examples / 1 batch of 23 = 64 total batches\n",
+    "training_steps = 78 # 1950 training examples / 1 batch of 25 = 78 total batches\n",
     "num_hidden = 130\n",
     "display_step = 1\n",
     "\n",
@@ -147,17 +147,17 @@
     "# Define weights and biases\n",
     "\n",
     "# [100, 5]\n",
-    "# weights = tf.Variable(tf.random_uniform(\n",
-    "#         shape = [num_hidden, num_classes],\n",
-    "#         minval = (-1 / math.sqrt(num_hidden)),\n",
-    "#         maxval = (1 / math.sqrt(num_hidden))\n",
-    "# ))\n",
-    "weights = tf.Variable(tf.random_normal(\n",
+    "weights = tf.Variable(tf.random_uniform(\n",
     "        shape = [num_hidden, num_classes],\n",
-    "        ))\n",
+    "        minval = (-1 / math.sqrt(num_hidden)),\n",
+    "        maxval = (1 / math.sqrt(num_hidden))\n",
+    "))\n",
+    "# weights = tf.Variable(tf.random_normal(\n",
+    "#         shape = [num_hidden, num_classes],\n",
+    "#         ))\n",
     "# [5]\n",
-    "#biases = tf.Variable(tf.zeros([num_classes]))\n",
-    "biases = tf.Variable(tf.random_normal([num_classes]))"
+    "biases = tf.Variable(tf.zeros([num_classes]))\n",
+    "# biases = tf.Variable(tf.random_normal([num_classes]))"
    ]
   },
   {
@@ -274,8 +274,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input batch shape before swap: (23, 130, 3)\n",
-      "Input batch shape after swap: (130, 23, 3)\n"
+      "Input batch shape before swap: (25, 130, 3)\n",
+      "Input batch shape after swap: (130, 25, 3)\n"
      ]
     }
    ],
@@ -500,18 +500,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing accuracy (before): 39.420288.\n",
-      "Epoch 0 of 9 loss: 75.5132257342\n",
-      "Epoch 1 of 9 loss: 54.1599846482\n",
-      "Epoch 2 of 9 loss: 48.3951685131\n",
-      "Epoch 3 of 9 loss: 46.6368784606\n",
-      "Epoch 4 of 9 loss: 43.1235064566\n",
-      "Epoch 5 of 9 loss: 42.3143689036\n",
-      "Epoch 6 of 9 loss: 36.8318191916\n",
-      "Epoch 7 of 9 loss: 33.2801501304\n",
-      "Epoch 8 of 9 loss: 32.6419562548\n",
-      "Epoch 9 of 9 loss: 30.8667163998\n",
-      "Testing accuracy (After): 72.173912.\n"
+      "Testing accuracy (before): 30.315790.\n",
+      "Epoch 0 of 9 loss: 102.21546495\n",
+      "Epoch 1 of 9 loss: 85.1585726142\n",
+      "Epoch 2 of 9 loss: 68.7445184588\n",
+      "Epoch 3 of 9 loss: 69.1979663968\n",
+      "Epoch 4 of 9 loss: 59.1717105508\n",
+      "Epoch 5 of 9 loss: 56.1338808239\n",
+      "Epoch 6 of 9 loss: 52.0908441842\n",
+      "Epoch 7 of 9 loss: 61.0892435908\n",
+      "Epoch 8 of 9 loss: 54.1247192025\n",
+      "Epoch 9 of 9 loss: 48.7692163587\n",
+      "Testing accuracy (After): 48.631580.\n"
      ]
     }
    ],
@@ -568,9 +568,124 @@
     "\n",
     "Below are testing accuracies with different hyperparameter configurations\n",
     "\n",
-    "I have been restarting the kernel and running every cell each time I train, because I believe that rerunning the training block trains the same weights, causing it to overfit.\n",
+    "I have been **restarting the kernel and running every cell** each time I train, because I believe that rerunning the training block trains the same weights, causing it to overfit.\n",
     "\n",
     "I will restructure the code so that it will recreate the RNN fresh each time I call the training block"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 130 Hidden Units, Uniform Parameter Initialization Learning Rate = 0.001, Forget Bias = 1.0, 1950 Training set size (Added Patient 5 to 2,6,7 and 8), 10 Epochs (3 trial)\n",
+    "* I'm pretty sure Patient 5 has bad data\n",
+    "\n",
+    "Testing accuracy (before): 31.789473.\n",
+    "Epoch 0 of 9 loss: 100.842115641\n",
+    "Epoch 1 of 9 loss: 90.9780398607\n",
+    "Epoch 2 of 9 loss: 80.8622823954\n",
+    "Epoch 3 of 9 loss: 70.063480556\n",
+    "Epoch 4 of 9 loss: 66.061268568\n",
+    "Epoch 5 of 9 loss: 71.5318183601\n",
+    "Epoch 6 of 9 loss: 63.0258939266\n",
+    "Epoch 7 of 9 loss: 70.3008497357\n",
+    "Epoch 8 of 9 loss: 67.4842125177\n",
+    "Epoch 9 of 9 loss: 70.4355251789\n",
+    "\n",
+    "**Testing accuracy (After): 35.368423.**\n",
+    "\n",
+    "Testing accuracy (before): 15.368422.\n",
+    "Epoch 0 of 9 loss: 106.042573214\n",
+    "Epoch 1 of 9 loss: 100.837549567\n",
+    "Epoch 2 of 9 loss: 90.0879127383\n",
+    "Epoch 3 of 9 loss: 76.8832359314\n",
+    "Epoch 4 of 9 loss: 65.9866625369\n",
+    "Epoch 5 of 9 loss: 63.035643667\n",
+    "Epoch 6 of 9 loss: 60.9902391136\n",
+    "Epoch 7 of 9 loss: 58.6198381484\n",
+    "Epoch 8 of 9 loss: 61.8366071582\n",
+    "Epoch 9 of 9 loss: 61.0175560117\n",
+    "\n",
+    "**Testing accuracy (After): 41.684212.**\n",
+    "\n",
+    "Testing accuracy (before): 30.315790.\n",
+    "Epoch 0 of 9 loss: 102.21546495\n",
+    "Epoch 1 of 9 loss: 85.1585726142\n",
+    "Epoch 2 of 9 loss: 68.7445184588\n",
+    "Epoch 3 of 9 loss: 69.1979663968\n",
+    "Epoch 4 of 9 loss: 59.1717105508\n",
+    "Epoch 5 of 9 loss: 56.1338808239\n",
+    "Epoch 6 of 9 loss: 52.0908441842\n",
+    "Epoch 7 of 9 loss: 61.0892435908\n",
+    "Epoch 8 of 9 loss: 54.1247192025\n",
+    "Epoch 9 of 9 loss: 48.7692163587\n",
+    "\n",
+    "**Testing accuracy (After): 48.631580.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 130 Hidden Units, Random Parameter Initialization Learning Rate = 0.001, Forget Bias = 1.0, 1950 Training set size (Added Patient 5 to 2,6,7 and 8), 10 Epochs (4 trial)\n",
+    "* I think random parameter initialization doesn't start off the training well\n",
+    "* Patient 5 data could be bad?\n",
+    "\n",
+    "Testing accuracy (before): 3.578948.\n",
+    "Epoch 0 of 9 loss: 99.9669104815\n",
+    "Epoch 1 of 9 loss: 72.0648495555\n",
+    "Epoch 2 of 9 loss: 62.0949662924\n",
+    "Epoch 3 of 9 loss: 57.5817650557\n",
+    "Epoch 4 of 9 loss: 51.6854946613\n",
+    "Epoch 5 of 9 loss: 49.2769922316\n",
+    "Epoch 6 of 9 loss: 47.579695344\n",
+    "Epoch 7 of 9 loss: 43.0781202316\n",
+    "Epoch 8 of 9 loss: 40.585562855\n",
+    "Epoch 9 of 9 loss: 38.8059717715\n",
+    "\n",
+    "**Testing accuracy (After): 51.578945.**\n",
+    "\n",
+    "Testing accuracy (before): 9.894737.\n",
+    "Epoch 0 of 9 loss: 108.227854729\n",
+    "Epoch 1 of 9 loss: 77.4951348305\n",
+    "Epoch 2 of 9 loss: 67.2134123147\n",
+    "Epoch 3 of 9 loss: 56.7738210857\n",
+    "Epoch 4 of 9 loss: 49.8984229863\n",
+    "Epoch 5 of 9 loss: 46.7192458808\n",
+    "Epoch 6 of 9 loss: 43.3390797079\n",
+    "Epoch 7 of 9 loss: 39.8958960176\n",
+    "Epoch 8 of 9 loss: 35.7769611478\n",
+    "Epoch 9 of 9 loss: 33.8371066153\n",
+    "\n",
+    "**Testing accuracy (After): 61.052631.**\n",
+    "\n",
+    "Testing accuracy (before): 41.052631.\n",
+    "Epoch 0 of 9 loss: 87.2081525326\n",
+    "Epoch 1 of 9 loss: 63.3854770958\n",
+    "Epoch 2 of 9 loss: 55.1758368015\n",
+    "Epoch 3 of 9 loss: 51.2390588224\n",
+    "Epoch 4 of 9 loss: 47.2804168016\n",
+    "Epoch 5 of 9 loss: 42.2555266619\n",
+    "Epoch 6 of 9 loss: 44.7954301238\n",
+    "Epoch 7 of 9 loss: 39.0678042173\n",
+    "Epoch 8 of 9 loss: 36.6906130612\n",
+    "Epoch 9 of 9 loss: 34.2216135263\n",
+    "\n",
+    "**Testing accuracy (After): 50.526314.**\n",
+    "\n",
+    "Testing accuracy (before): 14.736841.\n",
+    "Epoch 0 of 9 loss: 89.8871182799\n",
+    "Epoch 1 of 9 loss: 65.9976360202\n",
+    "Epoch 2 of 9 loss: 62.2282075882\n",
+    "Epoch 3 of 9 loss: 56.3537967205\n",
+    "Epoch 4 of 9 loss: 53.254368335\n",
+    "Epoch 5 of 9 loss: 49.517870754\n",
+    "Epoch 6 of 9 loss: 46.6643895805\n",
+    "Epoch 7 of 9 loss: 43.0064454973\n",
+    "Epoch 8 of 9 loss: 41.5773445815\n",
+    "Epoch 9 of 9 loss: 40.5679547936\n",
+    "\n",
+    "**Testing accuracy (After): 51.789474.**"
    ]
   },
   {
